objects/Price_List_Item__c.object
<CustomObject>
    <description>To associate Price List with the Items and keep the item pricing info as well*.</description>
    <fields>
        <fullName>CEC_PTC_Rating__c</fullName>
        <description>this field coming from 
 http://www.gosolarcalifornia.ca.gov/equipment/pv_modules.php
                http://www.gosolarcalifornia.ca.gov/equipment/inverters.php</description>
        <label>CEC PTC Rating</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BoS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter Accesories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mounting Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_of_System_Per_Panel__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Cost of System Per Panel</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_per_Panel_cell_SH__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Cost per Panel (cell SH)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <description>Currency ISO Code from Price List (Master)</description>
        <formula>TEXT(Price_List__r.CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Cost__c</fullName>
        <label>Dealer Cost</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disc_Item_Description__c</fullName>
        <formula>Disc_Item_ID__r.Description__c</formula>
        <label>Disconnect Item Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disc_Item_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Oracle Item ID for Inverter Disconnect</description>
        <label>Disconnect Item ID</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Price List Items (Disconnect Item ID)</relationshipLabel>
        <relationshipName>Price_List_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_End_Date__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ext_Id__c</fullName>
        <externalId>true</externalId>
        <label>Ext Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <formula>IF(Item_ID__r.Active__c, &apos;true&apos;, &apos;false&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <description>Old formula: BLANKVALUE(Item_ID__r.Long_Description__c, Item_ID__r.Description__c)</description>
        <formula>If ((RIGHT($User.CountryDomainText__c,2) != &apos;us&apos;)&amp;&amp; Item_ID__r.Product_Family__c!=&apos;&apos;,Item_ID__r.Product_Family__c, Item_ID__r.Description__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Oracle Item ID</description>
        <label>Oracle Item ID</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Price List Items</relationshipLabel>
        <relationshipName>Price_List_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufacturing_cost__c</fullName>
        <description>The cost involved for making this Item.</description>
        <label>Manufacturing cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Module_Width__c</fullName>
        <label>Module Width</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PV_Cell_Count__c</fullName>
        <label>PV Cell Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PV_SIM_No__c</fullName>
        <label>PV SIM - No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_List_Item_Description__c</fullName>
        <label>Price List Item Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_List__c</fullName>
        <description>There will be one price list per Operating Unit</description>
        <label>Price List</label>
        <referenceTo>Price_List__c</referenceTo>
        <relationshipLabel>Price List Items</relationshipLabel>
        <relationshipName>Price_List_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pricing_1__c</fullName>
        <label>Pricing 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pricing_2__c</fullName>
        <label>Pricing 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pricing_3__c</fullName>
        <label>Pricing 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Sorting__c</fullName>
        <description>Sorting Order to be displayed in Quick QuotesProposal Tool</description>
        <label>Product Sorting</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Unique_ID__c</fullName>
        <formula>TEXT(Price_List__r.Oracle_Operating_Unit__c ) &amp; TEXT( CurrencyIsoCode ) &amp; TEXT( Type_1__c ) &amp; TEXT( Type_2__c ) &amp; TEXT( Type_3_Criteria__c ) &amp; Item_ID__c</formula>
        <label>Product Unique ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_1__c</fullName>
        <label>Quantity 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_2__c</fullName>
        <label>Quantity 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_3__c</fullName>
        <label>Quantity 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Safe_Harbor_ITEM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Safe Harbor ITEM</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Price List Items (Safe Harbor ITEM)</relationshipLabel>
        <relationshipName>Safe_Harbor_ITEM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SmartMount_Compatible_Module__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check only if Category is Module &amp; Module is Smart Mount Compatible</inlineHelpText>
        <label>SmartMount Compatible Module</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SmartPack_Non_SmartMnt_1__c</fullName>
        <label>SmartPack Non-SmartMnt 1</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SmartPack_Non_SmartMnt_2__c</fullName>
        <label>SmartPack Non-SmartMnt 2</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SmartPack_Non_SmartMnt_3__c</fullName>
        <label>SmartPack Non-SmartMnt 3</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SmartPack_SmartMnt_1__c</fullName>
        <label>SmartPack SmartMnt 1</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SmartPack_SmartMnt_2__c</fullName>
        <label>SmartPack SmartMnt 2</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SmartPack_SmartMnt_3__c</fullName>
        <label>SmartPack SmartMnt 3</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_1__c</fullName>
        <description>SmartPack or Ala Carte</description>
        <label>Type 1 Criteria</label>
        <picklist>
            <picklistValues>
                <fullName>Smart Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ala Carte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PV + Inverter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_2__c</fullName>
        <description>For EU Dealers [In-Roof or On-Roof]
For NA Dealers [SmartMount]</description>
        <label>Type 2 Criteria</label>
        <picklist>
            <picklistValues>
                <fullName>SmartMount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Roof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Roof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fronius</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solrif (flashings)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solrif (non-flashings)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_3_Criteria_Vendor__c</fullName>
        <description>This field will be used to contain the value of Inverter Type OR Vendor Type to calculate different Pricing in the Smart Pack</description>
        <label>Type 3 Criteria Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>Fronius</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Powerone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMA</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_3_Criteria__c</fullName>
        <description>For EU pricing only, Inverter type [SMA or Fronius]</description>
        <label>Type 3 Criteria</label>
        <picklist>
            <picklistValues>
                <fullName>SMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fronius</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Santerno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Powerone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power-One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SolarEdge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_4_Criteria__c</fullName>
        <label>Type 4 Criteria</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Price List Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Item_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Item_Description__c</field>
            <operation>contains</operation>
            <value>invisimount</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TPO_FR_Price_List_Items</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Manufacturing_cost__c</columns>
        <columns>Item_ID__c</columns>
        <columns>Item_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Price_List__c</field>
            <operation>equals</operation>
            <value>TPO FR Pricelist</value>
        </filters>
        <label>TPO FR Price List Items</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Price List Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price List Items</pluralLabel>
    <recordTypes>
        <fullName>EU</fullName>
        <active>true</active>
        <description>EU</description>
        <label>EU</label>
    </recordTypes>
    <recordTypes>
        <fullName>NA</fullName>
        <active>true</active>
        <description>NA</description>
        <label>NA</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>